--- a/main.html
+++ b/main.html
@@ -19,8 +19,10 @@
 
 <main>
     <div class="container">
-        <h1>Welcome to My Portfolio</h1>
+        <h1>Oluwatamilore Ojo</h1>
+        <h1>Welcome to My Portfolio</h1> 
         <p>This is the main page of my portfolio website. Here you can find information about me, my projects, and my work experience.</p>
+
     </div>
 </main>
 
