--- a/project.html
+++ b/project.html
@@ -1,61 +1,98 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-    <title>Projects</title>
-</head>
-<header>
-    <nav>
-    <a href="main.html">Home</a> |
-    <a href="about.html">About Me</a> |
-    <a href="project.html">Projects</a> |
-    <a href="experience.html">Work Experience</a> |
-    <a href="contact.html">Contact Me</a>
-</header>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Projects</title>
 
+  <!-- Bootstrap CSS -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    crossorigin="anonymous"
+  >
+
+  <style>
+    /* Make carousel icons black */
+    .carousel-control-prev-icon,
+    .carousel-control-next-icon {
+      filter: invert(1);
+    }
+
+    /* Make all carousel images the same size */
+    .carousel-item img {
+      width: 100%;
+      height: 500px; /* Change this value to your desired height */
+      object-fit: cover; /* Ensures the image fills the area without distortion */
+    }
+  </style>
+</head>
 
 <body>
-    <main>
-    <div id="carouselExampleCaptions" class="carousel slide">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="..." class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Calculator</h5>
-        <p>This project is a calculator</p>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light px-3">
+      <a href="main.html">Home</a>
+      <a href="about.html">About Me</a>
+      <a href="project.html">Projects</a>
+      <a href="experience.html">Work Experience</a>
+      <a href="contact.html">Contact Me</a>
+    </nav>
+  </header>
+
+  <main class="container mt-5">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+      
+      <!-- Indicators -->
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></button>
       </div>
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>C project</h5>
-        <p>Flight project: ...</p>
+
+      <!-- Slides -->
+      <div class="carousel-inner">
+
+        <div class="carousel-item active">
+          <img src="calc.png" alt="Calculator project">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Calculator</h5>
+            <p>This project is a calculator built using Java.</p>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="tictactoe.png" alt="Tic Tac Toe project">
+          <div class="carousel-caption d-none d-md-block">
+            <h5 style="background-color: rgba(0, 0, 0, 0.6);">Tic Tac Toe</h5>
+            <p style="background-color: rgba(0, 0, 0, 0.6);">This game was created using Java.</p>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="python_project.png" alt="Python project">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Python Project</h5>
+            <p>This project was built using Python.</p>
+          </div>
+        </div>
       </div>
+
+      <!-- Controls -->
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev" style="filter: invert(1);">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next" style="filter: invert(1);">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>python</h5>
-        <p>this project is about????</p>
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-    </main>
+  </main>
+
+  <!-- Bootstrap JS -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    crossorigin="anonymous"
+  ></script>
 </body>
 </html>
