--- a/work.html
+++ b/work.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-    <title>Work Experience</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Oluwatamilore Ojo</title>
 </head>
-<body>
-<header>
+<body style="margin: 0; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; background-color: #fff;">
+
+  <header style="position: absolute; top: 20px;">
     <nav>
-    <a href="main.html">Home</a> |
-    <a href="about.html">About Me</a> |
-    <a href="projects.html">Projects</a> |
-    <a href="experience.html">Work Experience</a> |
-    <a href="contact.html">Contact Me</a>
+      <a href="main.html">Home</a> |
+      <a href="about.html">About Me</a> |
+      <a href="project.html">Projects</a> |
+      <a href="work.html">Work Experience</a> |
+      <a href="contact.html">Contact Me</a>
     </nav>
 </header>
 </body>
+<main>
+    <div style="position: relative; display: inline-block;">
+      <!-- Overlay image -->
+      <img src="pink.png" alt="Pink overlay" 
+           style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
+                  width: 450%; opacity: 0.4; z-index: 0;">
+      <!-- Name -->
+      <h1 style="position: relative; z-index: 1; color: black; font-size: 3rem; font-family: Arial, sans-serif; margin: 0;">
+        Work Experience
+      </h1>
+      <h3>
+    
+      </h3>
+    </div>
 </html>
