commit: main.html commit: about.html commit: work.html commit: project.html commit: contact.html

--- a/contact.html
+++ b/contact.html
@@ -1,53 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Oluwatamilore Ojo</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact - Oluwatamilore Ojo</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
 </head>
-<body style="margin: 0; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; background-color: #fff;">
 
-  <header style="position: absolute; top: 20px;">
+<body style="margin:0;height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;
+text-align:center;background-color:#fff0f5;font-family:'Poppins',sans-serif;color:#222;position:relative;overflow:hidden;">
+
+  <header style="position:absolute;top:20px;font-weight:500;">
     <nav>
-      <a href="main.html">Home</a> |
-      <a href="about.html">About Me</a> |
-      <a href="project.html">Projects</a> |
-      <a href="work.html">Work Experience</a> |
-      <a href="contact.html">Contact Me</a>
+      <a href='main.html' style='margin:0 10px;text-decoration:none;color:#333;'>Home</a> |
+      <a href='about.html' style='margin:0 10px;text-decoration:none;color:#333;'>About Me</a> |
+      <a href='project.html' style='margin:0 10px;text-decoration:none;color:#333;'>Projects</a> |
+      <a href='work.html' style='margin:0 10px;text-decoration:none;color:#333;'>Work Experience</a> |
+      <a href='contact.html' style='margin:0 10px;text-decoration:none;color:#333;'>Contact Me</a>
     </nav>
-</header>
-<main>
-    <div style="position: relative; display: inline-block;">
-      <!-- Overlay image -->
-      <img src=".../picture/pink.png" alt="Pink overlay" 
-           style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
-                  width: 450%; opacity: 0.4; z-index: 0;">
-      <!-- Name -->
-      <h1 style="position: relative; z-index: 1; color: black; font-size: 3rem; font-family: Arial, sans-serif; margin: 0;">
-        Contact Me
-      </h1>
-        <img src=".../picture/email.png" alt="email icon" style="position: relative; z-index: 1; width:50px; height:50px; margin-top:20px;">
-        <h3 style="position: relative; z-index: 1; color: black; font-size: 1.5rem; font-family: Arial, sans-serif; margin: 0; margin-top:10px;">
-        Email: tamiloreojo381@gmail.com
-        </h3>
-        <img src=".../picture/phone.png" alt="phone icon" style="position: relative; z-index: 1; width:50px; height:50px; margin-top:20px;">
-        <h3 style="position: relative; z-index: 1; color: black; font-size: 1.5rem; font-family: Arial, sans-serif; margin: 0; margin-top:10px;">
-        Phone: +44 7490750156
-        </h3>
-        <img src=".../picture/linkdn.png" alt="linkedin icon" style="position: relative; z-index: 1; width:50px; height:50px; margin-top:20px;">
-        <h3 style="position: relative; z-index: 1; color: black; font-size: 1.5rem; font-family: Arial, sans-serif; margin: 0; margin-top:10px;">
-        LinkedIn: www.linkedin.com/in/oluwatamilore-ojo-2384b2363
-        </h3>
-        <img src=".../picture/github.png" alt="github icon" style="position: relative; z-index: 1; width:50px; height:50px; margin-top:20px;">
-        <h3 style="position: relative; z-index: 1; color: black; font-size: 1.5rem; font-family: Arial, sans-serif; margin: 0; margin-top:10px;">
-        GitHub: https://github.com/Tamo74
-        </h3>
+  </header>
 
+  <main style="position:relative;text-align:center;">
+    <img src="pink.png" alt="Pink overlay"
+      style="position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);
+             width:500px;opacity:0.3;z-index:0;">
+    <h1 style="position:relative;z-index:1;font-size:3rem;">Contact Me</h1>
 
-
-
-
+    <div style="position:relative;z-index:1;margin-top:20px;">
+      <p>Email: <strong>tamiloreojo381@gmail.com</strong></p>
+      <p>Phone: <strong>+44 7490750156</strong></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/oluwatamilore-ojo-2384b2363" target="_blank" style="color:#000;">Profile</a></p>
+      <p>GitHub: <a href="https://github.com/Tamo74" target="_blank" style="color:#000;">Tamo74</a></p>
     </div>
-</main>
+  </main>
 </body>
 </html>
