--- a/main.html
+++ b/main.html
@@ -1,39 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Oluwatamilore Ojo</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Home - Oluwatamilore Ojo</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
 </head>
-<body style="margin: 0; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; background-color: #fff;">
 
-  <header style="position: absolute; top: 20px;">
+<body style="
+  margin: 0; height: 100vh; display: flex; flex-direction: column; justify-content: center;
+  align-items: center; text-align: center; background-color: #fff0f5; font-family: 'Poppins', sans-serif; color: #222;
+  position: relative; overflow: hidden;
+">
+
+  <header style="position: absolute; top: 20px; font-weight: 500;">
     <nav>
-      <a href="main.html">Home</a> |
-      <a href="about.html">About Me</a> |
-      <a href="project.html">Projects</a> |
-      <a href="work.html">Work Experience</a> |
-      <a href="contact.html">Contact Me</a>
+      <a href='main.html' style='margin:0 10px; text-decoration:none; color:#333;'>Home</a> |
+      <a href='about.html' style='margin:0 10px; text-decoration:none; color:#333;'>About Me</a> |
+      <a href='project.html' style='margin:0 10px; text-decoration:none; color:#333;'>Projects</a> |
+      <a href='work.html' style='margin:0 10px; text-decoration:none; color:#333;'>Work Experience</a> |
+      <a href='contact.html' style='margin:0 10px; text-decoration:none; color:#333;'>Contact Me</a>
     </nav>
   </header>
 
   <main style="position: relative; text-align: center;">
-    <div style="position: relative; display: inline-block;">
-      <!-- Overlay image -->
-      <img src="pink.png" alt="Pink overlay" 
-           style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
-                  width: 450%; opacity: 0.4; z-index: 0;">
-      <!-- Name -->
-      <h1 style="position: relative; z-index: 1; color: black; font-size: 3rem; font-family: Arial, sans-serif; margin: 0;">
-        Oluwatamilore Ojo
-      </h1>
-    </div>
+    <img src="pink.png" alt="Pink overlay"
+      style="position:absolute; top:50%; left:50%; transform:translate(-50%,-50%);
+             width:500px; opacity:0.3; z-index:0;">
+    <h1 style="position:relative; z-index:1; font-size:3rem;">Welcome to My Portfolio</h1>
+    <h3 style="position:relative; z-index:1; font-weight:400; max-width:700px; margin:auto;">
+      I'm Oluwatamilore Ojo — a computer science student passionate about building creative, functional, and secure digital experiences.
+    </h3>
   </main>
-
 </body>
 </html>
-<script>
-document.addEventListener('DOMContentLoaded', function () {
-    document.body.style.backgroundColor = '#f595b0';
-});
-</script>
