--- a/project.html
+++ b/project.html
@@ -1,98 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projects</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Projects - Oluwatamilore Ojo</title>
 
   <!-- Bootstrap CSS -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    crossorigin="anonymous"
-  >
-
-  <style>
-    /* Make carousel icons black */
-    .carousel-control-prev-icon,
-    .carousel-control-next-icon {
-      filter: invert(1);
-    }
-
-    /* Make all carousel images the same size */
-    .carousel-item img {
-      width: 100%;
-      height: 500px; /* Change this value to your desired height */
-      object-fit: cover; /* Ensures the image fills the area without distortion */
-    }
-  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
 </head>
 
-<body>
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light px-3">
-      <a href="main.html">Home</a>
-      <a href="about.html">About Me</a>
-      <a href="project.html">Projects</a>
-      <a href="experience.html">Work Experience</a>
-      <a href="contact.html">Contact Me</a>
+<body style="margin:0; background-color:#fce4ec; font-family:'Poppins', sans-serif; color:#222;">
+
+  <!-- Navbar -->
+  <header style="text-align:center; padding:15px 0;">
+    <nav>
+      <a href='main.html' style='margin:0 10px;text-decoration:none;color:#333;'>Home</a> |
+      <a href='about.html' style='margin:0 10px;text-decoration:none;color:#333;'>About Me</a> |
+      <a href='project.html' style='margin:0 10px;text-decoration:none;color:#333;'>Projects</a> |
+      <a href='work.html' style='margin:0 10px;text-decoration:none;color:#333;'>Work Experience</a> |
+      <a href='contact.html' style='margin:0 10px;text-decoration:none;color:#333;'>Contact Me</a>
     </nav>
   </header>
 
-  <main class="container mt-5">
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-      
-      <!-- Indicators -->
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></button>
-      </div>
+  <!-- Main Content -->
+  <main class="container text-center mt-4" style="max-width:950px; margin:auto;">
+    <h1 style="margin-bottom:20px;">Projects</h1>
 
-      <!-- Slides -->
+    <div id="carouselExample" class="carousel slide" data-bs-ride="carousel"
+         style="border-radius:15px; overflow:hidden; box-shadow:0 4px 15px rgba(0,0,0,0.2); background-color:#f8bbd0;">
+      
       <div class="carousel-inner">
 
+        <!-- Slide 1 -->
         <div class="carousel-item active">
-          <img src="calc.png" alt="Calculator project">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Calculator</h5>
-            <p>This project is a calculator built using Java.</p>
+          <img src="calc.png" class="d-block w-100" 
+               style="height:600px; object-fit:contain; background-color:#f8bbd0;">
+          <div class="carousel-caption d-none d-md-block" 
+               style="background-color:rgba(0,0,0,0.6); border-radius:10px; padding:10px;">
+            <h5 style="color:white;">Java Calculator</h5>
+            <p style="color:white;">A functional calculator built with Java.</p>
           </div>
         </div>
 
+        <!-- Slide 2 -->
         <div class="carousel-item">
-          <img src="tictactoe.png" alt="Tic Tac Toe project">
-          <div class="carousel-caption d-none d-md-block">
-            <h5 style="background-color: rgba(0, 0, 0, 0.6);">Tic Tac Toe</h5>
-            <p style="background-color: rgba(0, 0, 0, 0.6);">This game was created using Java.</p>
+          <img src="tictactoe.png" class="d-block w-100" 
+               style="height:600px; object-fit:contain; background-color:#f8bbd0;">
+          <div class="carousel-caption d-none d-md-block" 
+               style="background-color:rgba(0,0,0,0.6); border-radius:10px; padding:10px;">
+            <h5 style="color:white;">Tic Tac Toe</h5>
+            <p style="color:white;">A fun Java-based game with GUI logic.</p>
           </div>
         </div>
 
+        <!-- Slide 3 -->
         <div class="carousel-item">
-          <img src="python_project.png" alt="Python project">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Python Project</h5>
-            <p>This project was built using Python.</p>
+          <img src="python_project.png" class="d-block w-100" 
+               style="height:600px; object-fit:contain; background-color:#f8bbd0;">
+          <div class="carousel-caption d-none d-md-block" 
+               style="background-color:rgba(0,0,0,0.6); border-radius:10px; padding:10px;">
+            <h5 style="color:white;">Python Project</h5>
+            <p style="color:white;">A Python-based project showcasing automation and logic.</p>
           </div>
         </div>
       </div>
 
       <!-- Controls -->
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev" style="filter: invert(1);">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev" style="filter:invert(1);">
+        <span class="carousel-control-prev-icon"></span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next" style="filter: invert(1);">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next" style="filter:invert(1);">
+        <span class="carousel-control-next-icon"></span>
       </button>
     </div>
   </main>
 
   <!-- Bootstrap JS -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    crossorigin="anonymous"
-  ></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
