commit: main.html commit: about.html commit: contact.html commit: project.html commit: work.html commit: cv.html

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,9 @@ text-align:center;background-color:#fff0f5;font-family:'Poppins',sans-serif;colo
       <a href='about.html' style='margin:0 10px;text-decoration:none;color:#333;'>About Me</a> |
       <a href='project.html' style='margin:0 10px;text-decoration:none;color:#333;'>Projects</a> |
       <a href='work.html' style='margin:0 10px;text-decoration:none;color:#333;'>Work Experience</a> |
-      <a href='contact.html' style='margin:0 10px;text-decoration:none;color:#333;'>Contact Me</a>
+      <a href='contact.html' style='margin:0 10px;text-decoration:none;color:#333;'>Contact Me</a> |
+      <a href="cv.html" style="margin:0 10px; text-decoration:none; color:#333;">CV</a>
+
     </nav>
   </header>
 
