--- a/main.html
+++ b/main.html
@@ -19,7 +19,8 @@
       <a href='about.html' style='margin:0 10px; text-decoration:none; color:#333;'>About Me</a> |
       <a href='project.html' style='margin:0 10px; text-decoration:none; color:#333;'>Projects</a> |
       <a href='work.html' style='margin:0 10px; text-decoration:none; color:#333;'>Work Experience</a> |
-      <a href='contact.html' style='margin:0 10px; text-decoration:none; color:#333;'>Contact Me</a>
+      <a href='contact.html' style='margin:0 10px; text-decoration:none; color:#333;'>Contact Me</a> |
+      <a href="cv.html" style="margin:0 10px; text-decoration:none; color:#333;">CV</a>
     </nav>
   </header>
 
@@ -27,10 +28,9 @@
     <img src="pink.png" alt="Pink overlay"
       style="position:absolute; top:50%; left:50%; transform:translate(-50%,-50%);
              width:500px; opacity:0.3; z-index:0;">
-    <h1 style="position:relative; z-index:1; font-size:3rem;">Welcome to My Portfolio</h1>
-    <h3 style="position:relative; z-index:1; font-weight:400; max-width:700px; margin:auto;">
-      I'm Oluwatamilore Ojo — a computer science student passionate about building creative, functional, and secure digital experiences.
-    </h3>
+    <h1 style="position:relative; z-index:1; font-size:3rem;">Oluwatamilore Ojo</h1>
+
+    
   </main>
 </body>
 </html>
