--- a/work.html
+++ b/work.html
@@ -16,7 +16,8 @@
       <a href='about.html' style='margin:0 10px;text-decoration:none;color:#333;'>About Me</a> |
       <a href='project.html' style='margin:0 10px;text-decoration:none;color:#333;'>Projects</a> |
       <a href='work.html' style='margin:0 10px;text-decoration:none;color:#333;'>Work Experience</a> |
-      <a href='contact.html' style='margin:0 10px;text-decoration:none;color:#333;'>Contact Me</a>
+      <a href='contact.html' style='margin:0 10px;text-decoration:none;color:#333;'>Contact Me</a> |
+      <a href="cv.html" style="margin:0 10px; text-decoration:none; color:#333;">CV</a>
     </nav>
   </header>
 
