commit: project.html commit: about.html commit: contact.html commit: main.html commit: work.html commit: project.html commit:chattr.png

--- a/project.html
+++ b/project.html
@@ -56,12 +56,12 @@
 
         <!-- Slide 3 -->
         <div class="carousel-item">
-          <img src="python_project.png" class="d-block w-100" 
+          <img src="chattr.png" class="d-block w-100" 
                style="height:600px; object-fit:contain; background-color:#f8bbd0;">
           <div class="carousel-caption d-none d-md-block" 
                style="background-color:rgba(0,0,0,0.6); border-radius:10px; padding:10px;">
-            <h5 style="color:white;">Python Project</h5>
-            <p style="color:white;">A Python-based project showcasing automation and logic.</p>
+            <h5 style="color:white;">chatrr</h5>
+            <p style="color:white;">a java based project to connect with others</p>
           </div>
         </div>
       </div>
