commit: index.html commit: about.html commit: contact.html commit: cv.html commit: project.html commit: work.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <header style="position: absolute; top: 20px; font-weight: 500;">
     <nav>
-      <a href='main.html' style='margin:0 10px; text-decoration:none; color:#333;'>Home</a> |
+      <a href='index.html' style='margin:0 10px; text-decoration:none; color:#333;'>Home</a> |
       <a href='about.html' style='margin:0 10px; text-decoration:none; color:#333;'>About Me</a> |
       <a href='project.html' style='margin:0 10px; text-decoration:none; color:#333;'>Projects</a> |
       <a href='work.html' style='margin:0 10px; text-decoration:none; color:#333;'>Work Experience</a> |
