--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body style="margin:0;height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;
 text-align:center;background-color:#fff0f5;font-family:'Poppins',sans-serif;color:#222;position:relative;overflow:hidden;">
     <nav>
-      <a href='main.html' style='margin:0 10px;text-decoration:none;color:#333;'>Home</a> |
+      <a href='index.html' style='margin:0 10px;text-decoration:none;color:#333;'>Home</a> |
       <a href='about.html' style='margin:0 10px;text-decoration:none;color:#333;'>About Me</a> |
       <a href='project.html' style='margin:0 10px;text-decoration:none;color:#333;'>Projects</a> |
       <a href='work.html' style='margin:0 10px;text-decoration:none;color:#333;'>Work Experience</a> |
