--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@ text-align:center;background-color:#fff0f5;font-family:'Poppins',sans-serif;colo
 
   <header style="position:absolute;top:20px;font-weight:500;">
     <nav>
-      <a href='main.html' style='margin:0 10px;text-decoration:none;color:#333;'>Home</a> |
+      <a href='index.html' style='margin:0 10px;text-decoration:none;color:#333;'>Home</a> |
       <a href='about.html' style='margin:0 10px;text-decoration:none;color:#333;'>About Me</a> |
       <a href='project.html' style='margin:0 10px;text-decoration:none;color:#333;'>Projects</a> |
       <a href='work.html' style='margin:0 10px;text-decoration:none;color:#333;'>Work Experience</a> |
