--- a/cv.html
+++ b/cv.html
@@ -12,7 +12,7 @@
   <!-- Header -->
   <header style="padding:20px 0; font-weight:500;">
     <nav>
-      <a href='main.html' style='margin:0 10px;text-decoration:none;color:#333;'>Home</a> |
+      <a href='index.html' style='margin:0 10px;text-decoration:none;color:#333;'>Home</a> |
       <a href='about.html' style='margin:0 10px;text-decoration:none;color:#333;'>About Me</a> |
       <a href='project.html' style='margin:0 10px;text-decoration:none;color:#333;'>Projects</a> |
       <a href='work.html' style='margin:0 10px;text-decoration:none;color:#333;'>Work Experience</a> |
