--- a/project.html
+++ b/project.html
@@ -14,7 +14,7 @@
   <!-- Navbar -->
   <header style="text-align:center; padding:15px 0;">
     <nav>
-      <a href='main.html' style='margin:0 10px;text-decoration:none;color:#333;'>Home</a> |
+      <a href='index.html' style='margin:0 10px;text-decoration:none;color:#333;'>Home</a> |
       <a href='about.html' style='margin:0 10px;text-decoration:none;color:#333;'>About Me</a> |
       <a href='project.html' style='margin:0 10px;text-decoration:none;color:#333;'>Projects</a> |
       <a href='work.html' style='margin:0 10px;text-decoration:none;color:#333;'>Work Experience</a> |
