--- a/project.html
+++ b/project.html
@@ -50,7 +50,7 @@
           <div class="carousel-caption d-none d-md-block" 
                style="background-color:rgba(0,0,0,0.6); border-radius:10px; padding:10px;">
             <h5 style="color:white;">Tic Tac Toe</h5>
-            <p style="color:white;">A fun Java-based game with GUI logic.</p>
+            <p style="color:white;">A fun Java-based game.</p>
           </div>
         </div>
 
