--- a/project.html
+++ b/project.html
@@ -61,13 +61,13 @@
           <div class="carousel-caption d-none d-md-block" 
                style="background-color:rgba(0,0,0,0.6); border-radius:10px; padding:10px;">
             <h5 style="color:white;">chatrr</h5>
-            <p style="color:white;">a java based project to connect with others</p>
+            <p style="color:white;">A java based project to connect with others</p>
           </div>
         </div>
       </div>
 
       <!-- Controls -->
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev" style="filter:invert(1);">
+      <button class="carosusel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev" style="filter:invert(1);">
         <span class="carousel-control-prev-icon"></span>
       </button>
       <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next" style="filter:invert(1);">
