commit: oluwatamilore_ojo.docx commit: cv.html commit: project.html

--- a/cv.html
+++ b/cv.html
@@ -106,6 +106,28 @@
       </div>
 
     </div>
+    <!-- CV Download Section -->
+<div style="text-align:center; margin-top:50px; z-index:1; position:relative;">
+  <h2 style="font-family:'Poppins',sans-serif; font-weight:600; color:#222;">Want to download my CV?</h2>
+  <p style="font-family:'Poppins',sans-serif; color:#444; margin-bottom:25px;">
+    Click below to download the full version of my CV in Word format.
+  </p>
+
+  <a href="oluwatamilore_ojo.docx" 
+     download="oluwatamilore_ojo.docx"
+     style="display:inline-block; background-color:#d81b60; color:white; padding:12px 28px; 
+            border-radius:10px; text-decoration:none; font-weight:600; 
+            box-shadow:0 4px 8px rgba(0,0,0,0.15); transition:0.3s;">
+    📄 Download CV (.docx)
+  </a>
+
+  <!-- Optional: If you also have a PDF version -->
+  <p style="margin-top:15px;">
+    Prefer PDF? <a href="oluwatamilore_ojo.docx" download="oluwatamilore_ojo.pdf"
+    style="color:#d81b60; text-decoration:underline; font-weight:500;">Download PDF version</a>
+  </p>
+</div>
+
   </main>
 </body>
 </html>
